--- a/config.ini
+++ b/config.ini
@@ -2,8 +2,8 @@
 path = 
 
 [ui]
-mode = dark
-override_linux_dark_mode = true
+mode = EchterAlsFake
+override_linux_dark_mode = false
 
 [windows]
 video_output = output\video\
