Added Settings Tab Fixed an Issue Playlist now showing processing
Todo:

Make processing threaded

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,6 @@
-
 [VidFetch]
-output_path = ./
+output_path = /home/asuna/
 default_quality = ask
 default_codec = aac
-default_mode = video
-
-
+default_mode = music
 
